<resources>
    <string name="app_name">Value Converter</string>
    <string name="enter_value">Enter value</string>
    <string name="text_millimeters">millimeters</string>
    <string name="text_centimeters">centimeters</string>
    <string name="text_decimeters">decimeters</string>
    <string name="text_meters">meters</string>
    <string name="text_kilometers">kilometers</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="text_inches">inches</string>
    <string name="text_feet">feet</string>
    <string name="text_yards">yards</string>
    <string name="text_miles">miles</string>
    <string name="text_grams">grams</string>
    <string name="text_milligrams">milligrams</string>
    <string name="text_kilograms">kilograms</string>
    <string name="text_tonnes">tonnes</string>
    <string name="text_pounds">pounds</string>
    <string name="text_ounces">ounces</string>
    <string name="text_centners">centners</string>
    <string name="text_microseconds">microseconds</string>
    <string name="text_milliseconds">milliseconds</string>
    <string name="text_seconds">seconds</string>
    <string name="text_minutes">minutes</string>
    <string name="text_hours">hours</string>
    <string name="text_days">days</string>
    <string name="text_months">months</string>
    <string name="text_years">years</string>
    <string name="text_weeks">weeks</string>
    <string name="text_meters_per_second">m/s</string>
    <string name="text_kilometers_per_hour">km/h</string>
    <string name="text_miles_per_hour">mil/h</string>
</resources>