<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ActivityMain" >

    <!-- Верхняя полоса активности -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <!-- Заголовок -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.Toolbar>

    <!-- Выезжающее справа меню -->
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_toolbar" >

        <!-- Кнопки -->
        <LinearLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp" >

            <!-- Длина -->
            <Button
                android:id="@+id/button_length"
                android:layout_width="match_parent"
                android:drawableTop="@drawable/ic_length"
                android:gravity="center"
                android:text="@string/length"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <!-- Масса -->
            <Button
                android:id="@+id/button_mass"
                android:layout_width="match_parent"
                android:drawableTop="@drawable/ic_mass"
                android:gravity="center"
                android:text="@string/mass"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <!-- Время -->
            <Button
                android:id="@+id/button_time"
                android:layout_width="match_parent"
                android:drawableTop="@drawable/ic_time"
                android:gravity="center"
                android:text="@string/time"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <!-- Скорость -->
            <Button
                android:id="@+id/button_speed"
                android:layout_width="match_parent"
                android:drawableTop="@drawable/ic_speed"
                android:gravity="center"
                android:text="@string/speed"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Навигация -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>

</RelativeLayout>
